--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="rangeContainer">
-					<p>Interactions</p>
+					<p>Number of scenes:</p>
 					<input type="range" min="0" max="200" value="0" class="valueSlider1" oninput="this.nextElementSibling.value = this.value" />
 					<output>0</output>
 				</div>
@@ -83,7 +83,7 @@
 			</div>
 
 				<div class="rangeContainer">
-				<p>Interactions</p>
+				<p>Number of scenes:</p>
 				<input type="range" min="0" max="200" value="0" class="valueSlider2" oninput="this.nextElementSibling.value = this.value" />
 				<output>0</output>
 			</div>
